# qdrant-futureagi-rag-workshop

./: .env.example  .gitignore  CLAUDE.md  README.md  RUNBOOK.md  agent.py  app.py  check_baseline.py  ingest.py  prep.py  pyproject.toml  run_golden.py  scaling_curve.py  snapshot.py  verify_arc.py  workshop.ipynb
.streamlit/: config.toml
data/: golden_dataset.jsonl  scaling_curve.json
helpers/: chunking.py  config.py  corpus.py  dedup.py  embeddings.py  pokeapi.py  ui.py
