[project]
name = "qdrant-futureagi-rag-workshop"
version = "0.1.0"
description = "Qdrant x Future AGI agentic RAG workshop"
requires-python = ">=3.11,<3.13"
dependencies = [
    "qdrant-client[fastembed]>=1.12",
    "langchain>=0.3",
    "langgraph>=0.2",
    "langchain-anthropic>=0.3",
    "langchain-qdrant>=0.2",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "nbformat>=5.10.4",
]

[dependency-groups]
# Future AGI's layer — installed here so tracing/evals run against the same env.
futureagi = [
    "ai-evaluation",
    "fi-instrumentation-otel",
    "traceAI-langchain",
    "futureagi",
]

[tool.uv]
# Pin an interpreter with mature wheels for onnxruntime/fastembed.
python-preference = "managed"
